--- a/state.tex
+++ b/state.tex
@@ -717,7 +717,7 @@ The next sections describe two known techniques that implement subsumptive tabli
 
   \subsection{Dynamic Threaded Sequential Automata}\label{sec:dtsa}
 
-  DTSA (\textit{Dynamic Threaded Sequential Automata}) is a data structure that facilitates good indexing and incremental
+  \textit{Dynamic Threaded Sequential Automata} (DTSA) is a data structure that provides good indexing and incremental
   returning of a subset of answers from a subsuming call to a subsumed call \cite{Rao-96}.
   
   This structure orders answers as they are generated, hence it can easily mark which answers were already retrieved, enabling
@@ -729,11 +729,11 @@ The next sections describe two known techniques that implement subsumptive tabli
   \subsubsection{Sequential Factoring Automaton: Basic search}
   
   A SFA solves the problem of retrieving an ordered subset of answers, starting from the oldest to the newest answer. It is an ordered
-  tree-structure automaton and very similar to a trie. It starts with a root as the start state and has edges as transitions
+  tree-structure automaton and is very similar to a trie. It starts with a root as the start state and has edges as transitions
   that represent unifications. Every leaf represents a distinct term and the transitions on the path from the root to a leaf
   represent the operations necessary to unify the goal with the term at the leaf.
   
-  Apart from ordering, SFAs differ from tries in that transitions from a state may not be unique and each transition in a tree
+  Apart from ordering, SFAs differ from tries in that transitions from a state may not be unique and each transition in a trie
   denotes match operations, not unify operations.
   
   \begin{figure}[ht]
@@ -758,27 +758,34 @@ The next sections describe two known techniques that implement subsumptive tabli
     \item New answer: \textbf{p(a, a, d)}.
   \end{enumerate}
   
-  When searching new answers for a subsumed subgoal $G$, the structure of $G$ is progressively consumed and its variables
-  are instantiated as new transitions are taken.
+  When a new subgoal $G$ subsumed by the subgoal $G'$ is first called, we must determine the assignments
+  from $G'$ to the sub-terms of $G$, because only variable substitutions are inserted into a SFA.
+  The assignments are usually stored under the choice point.
   
-  The process of retrieving all specific answers starts in the root state with an empty \textit{continuation stack}.
-  When a state $s$ is reached, the leftmost \textit{applicable transition} is chosen. Before moving to the next state,
-  we select the next applicable transition and push it on the continuation stack.
+  For example, if $G'$ is \textbf{p(X, Y, Z)} and $G$ is \textbf{p(a, a, V)}, the variable assignments
+  are $X = a, Y = a, Z = VAR0$. During unification operations, we must unify the first SFA symbol
+  to $a$, then to $a$ again, and finally with $VAR0$.
+  Once a variable is \textit{bound}, subsequent unify operations must unify with the bounded sub-term.
+  
+  The unification process starts in the root state with an empty \textit{continuation stack}.
+  When a state $s$ is reached, the leftmost transition that unifies with the current $G$ assignment is chosen,
+  this is called the \textit{applicable transition}.
+  Before moving to the next state, we select the next applicable transition and push it on the continuation stack.
   If no applicable transitions are available at state $s$ or if an answer was found, we pop a transition from
   the stack and use it to search for more answers. Once no more transitions can be taken and the stack is empty, the
   search process ends.
   
   Using the SFA in Figure \ref{fig:sfa_example} and the subgoal $G$, \textbf{p(a, a, V)}, the search mechanism starts
   at the root state and is ready to retrieve all answers that unify with $G$.
-  The first applicable transition is $s1$ to $s2$ because it unifies with the first $G$ symbol. The transition
-  $s1$ to $s5$ can not be pushed into the continuation stack because it does not unify, but $s1$ to $s8$ can.
+  The first applicable transition is $s1 \rightarrow s2$ because it unifies with the first symbol: $a$. The transition
+  $s1 \rightarrow s5$ can not be pushed into the continuation stack because it does not unify, but $s1 \rightarrow s8$ does.
   In state $s2$ only one transition is available, thus nothing is pushed into the stack.
-  Transition $s2$ to $s3$ unifies with our subgoal and it is taken. In the state $s3$, the variable $V$ can unify with $a$,
-  thus we can take get to state $s4$, arriving at a leaf state and a new answer, \textbf{V = a}.
+  Transition $s2 \rightarrow s3$ unifies with symbol $a$ and we move to state $s3$. Here, the variable $VAR0$ (that represents $V$)
+  can unify with $a$, thus we can get to state $s4$, arriving at a leaf state and a new answer, \textbf{V = a}.
   
-  Next, the process must use the continuation stack to retrieve more answers. Transition $s1$ to $s8$ is popped from the stack
-  and the process arrives at state $s8$ with 3 available transitions. Using the same mechanisms, a new answer is retrieved,
-  \textbf{V = c} and the continuation stack contains the transition $s8$ to $s13$.
+  Next, the process must use the continuation stack to retrieve more answers. Transition $s1 \rightarrow s8$ is popped from the stack
+  and we arrive at state $s8$ with 3 available transitions. Using the previous rules, a new answer is retrieved,
+  \textbf{V = c} and the continuation stack contains the transition $s8 \rightarrow s13$.
   
   Finally, once states $s8$, $s11$ and $s14$ are visited, the process arrives at a leaf state and a new answer, \textbf{V = d}, is retrieved.
   The process finishes and every answer that is specific to \textbf{p(a, a, V)} is found.
@@ -791,7 +798,7 @@ The next sections describe two known techniques that implement subsumptive tabli
   visited, states $s8$ and $s9$ are also guaranteed to be visited, as they denote the same path.
   
   A SFA is converted to a TSA by adding \textit{equivalence links} between equivalent states.
-  The SFA in Figure \ref{fig:sfa_example} was transformed into a TSA as seen in Figure \ref{fig:tsa_example}.
+  The SFA in Figure \ref{fig:sfa_example} was transformed into a TSA in Figure \ref{fig:tsa_example}.
   
   \begin{figure}[ht]
     \centering
@@ -813,8 +820,8 @@ The next sections describe two known techniques that implement subsumptive tabli
   
   If we followed only safe transitions, no equivalence links would be used, hence we must check if there is any
   equivalence link that can be used in the next state that covers the same answers if we pushed the
-  usual transition into the stack. Thus, at state $s2$ we would use the equivalence $s2$ to $s8$, instead of
-  the transition $s1$ to $s8$.
+  usual next applicable transition into the stack. Thus, at state $s2$ we would use the equivalence $s2$ to $s8$, instead of
+  the transition $s1 \rightarrow s8$.
   
   \begin{figure}[ht]
     \centering
@@ -825,13 +832,13 @@ The next sections describe two known techniques that implement subsumptive tabli
    
   \subsubsection{Dynamic Threaded Sequential Automata: Incremental answer retrieval}
   
-  The previous mechanisms only works if we have the complete set of answers for the subsuming subgoal.
+  The previously described mechanisms only work if we have the complete set of answers for the subsuming subgoal.
   A new mechanism that deals with incomplete answer sets must be devised, so that after all current answers
   are retrieved, the continuation stack can be used to retrieve newly inserted answers.
   
   The Dynamic Threaded Sequential Automata extends the TSA with special transitions in states
   were new transitions can be inserted or in states were no equivalence links exist.
-  Figure \ref{fig:dtsa_example} shows two DTSAs: (a) shows the converted TSA from Figure \ref{fig:tsa_example}, and
+  Figure \ref{fig:dtsa_example} illustrates two DTSAs: (a) shows the converted TSA from Figure \ref{fig:tsa_example}, and
   (b) the resulting DTSA after inserting the answer \textbf{p(a, b, c)}.
   
   During answer retrieval, if no answer is found and the top of the continuation stack contains
@@ -844,26 +851,26 @@ The next sections describe two known techniques that implement subsumptive tabli
   For example, retrieving answers to subgoal \textbf{p(a, X, c)} from the DTSA (a) in Figure
   \ref{fig:dtsa_example} results in the answer \textbf{p(a, a, c)} and a continuation formed by the last
   visited state $s13$ and the stack containing (from bottom to top): $[s1 \rightarrow v1, s8 \rightarrow v8, s13 \rightarrow v13]$.
-  When the new answer \textbf{p(a, b, c)} is inserted into the DTSA in Figure \ref{fig:dtsa_example} and
-  the consumer for the subgoal \textbf{p(a, X, c)} checks if new answers are available, the continuation stack
-  is transformed by using the last visited state $s13$: $[s1 \rightarrow v1, s8 \rightarrow s15]$. Now
-  the answer \textbf{p(a, b, c)} can be easily retrieved using the transition from state $s8$ to $s15$.
+  After the new answer \textbf{p(a, b, c)} is inserted into the DTSA in Figure \ref{fig:dtsa_example} and
+  a consumer is resumed to consume new answers, it checks if new answers are available and the continuation stack
+  is thus transformed by using the last visited state $s13$ into: $[s1 \rightarrow v1, s8 \rightarrow s15]$. Now
+  the answer \textbf{p(a, b, c)} can be easily retrieved using the transition $s8 \rightarrow s15$.
   
   \subsubsection{Table Space}
   
   This new DTSA mechanism was implemented in XSB by extending the variant engine \cite{Rao-96}.
   
   First, each subgoal frame for generator nodes now contains both an answer trie and a DTSA.
-  Answer tries are used to check for duplicate answers. DTSA are created lazily, when new subsumed nodes
-  are generated.
-  
-  When a subgoal is marked as complete, the trie is compiled into WAM instructions and the DTSA is deleted.
-  Answers for subsumed goals are then retrieved by using trie instructions through the usual WAM backtracking
-  mechanism.
+  Answer tries are used to check for duplicate answers and the DTSA is created lazily, when a new subsumed node
+  first appears.
   
   Each subsumed subgoal in the call trie keeps an answer return list that is built using the DTSA technique.
   This answer list is used when variant goals of the subsumed goal are called, thus instead of using
-  the DTSA, can retrieve answers directly by traversing the linked list.
+  the DTSA, answers are retrieved directly by traversing the linked list.
+  
+  When a subgoal is marked as complete, its answer trie is compiled into WAM instructions and the DTSA is deleted.
+  Answers for subsumed goals are then retrieved by using trie instructions through the usual WAM backtracking
+  mechanism.
   
 \subsection{Time Stamped Tries} \label{sec:time_stamped_tries}
 
@@ -892,7 +899,7 @@ The next sections describe two known techniques that implement subsumptive tabli
   
   The process of inserting a new answer into a TST starts by traversing matching nodes as long the stored symbols
   match the new answer. If the current symbol does not match, the process changes from search to insert mode and
-  new nodes are inserted to represent a new trie path. Once the leaf node is created each node from leaf to root
+  new nodes are inserted to represent a new trie path. Once the leaf node is created, each node from leaf to root
   is traversed and its time stamp is updated to $T + 1$.
   
   \begin{figure}[ht]
@@ -904,7 +911,7 @@ The next sections describe two known techniques that implement subsumptive tabli
   
   Figure \ref{fig:tst_2} shows the TST from Figure \ref{fig:tst_1} after a new answer \textbf{p(a, b, c)} was inserted.
   Note that each node from the answer leaf node to root node was updated with the new timestamp (6). Apart from
-  the time stamps, search and insertion in TSTs work exactly like in tries.
+  the time stamps, search and insertion in TSTs work exactly the same as tries.
   
   \subsubsection{Retrieving answers}
   
@@ -912,7 +919,8 @@ The next sections describe two known techniques that implement subsumptive tabli
   works by navigating the TST and unifying the variable values that are assigned from $G'$ to $G$.
   If we wanted to retrieve answers to the subgoal \textbf{p(a, a, X)} from the TST in Figure \ref{fig:tst_2},
   during the subgoal call we determine the assignments relatively to \textbf{path(X, Y, Z)}: $X = a, Y = a, Z = VAR0$,
-  and store them under the choice point.
+  and store them under the choice point. Then, these values $[a, a, VAR0]$ are then unified
+  with the trie symbols, thus finding answers that are specific to $G$.
   
   Like tries, TSTs only store substitutions for variables, thus we must unify
   the first sub-term $a$, then $a$ again and then the variable, which unifies with any symbol.
@@ -923,14 +931,14 @@ The next sections describe two known techniques that implement subsumptive tabli
   answers were already retrieved, thus avoiding repeated answers.
   
   The unification process that finds new answers by using a time stamp is separated from the process
-  of unifying the found answers with the subsumed subgoal. This \textit{two-tier mechanism} is key to the space and time
+  of unifying the retrieved answers with the subsumed subgoal. This \textit{two-tier mechanism} is key to the space and time
   efficiency of the design of TSTs \cite{Johnson-99} and allows identification of all relevant answers that have
   been added since the last time a search operation was done by using the time stamp.
   
   \subsubsection{Table Space}
 
   The table space in this technique extends the variant table space by
-  using TSTs instead of tries for subsuming goals.
+  using TSTs instead of answer tries for subsuming goals.
    
   Each subsumed subgoal in a call trie stores the last search time stamp $t$. The process of
   incrementally searching for new answers in a TST will use $t$ and update it after the process completes.
@@ -938,11 +946,11 @@ The next sections describe two known techniques that implement subsumptive tabli
   relevant answers.
   
   The subgoal in the call trie also stores an answer return list. Each time new answers are identified, they are appended
-  to this linked list. Each subsumptive consumer node will then consume answers from it. If no
+  to this linked list. The original subsumptive consumer and its variant subgoals will then consume answers from it. If no
   new answers can be retrieved from the list, the TST process is employed to identify more answers from the subsuming TST,
   inserting them into the list.
   
-  Each trie node maintains a time stamp index which stores all transitions in reverse order.
+  Each TST node maintains a time stamp index which stores all transitions in reverse order.
   It is not until a subsumed subgoal is first called that all time stamp related structures are created, thus
   allowing a more efficient use of space.
   
@@ -964,13 +972,16 @@ is able to find a subgoal $G'$ that subsumes $G$.
 The search is performed by recursively backtracking through the call trie $C$, trying
 to match the node symbols with sub-terms or symbols from $G$.
 
-A non-variable trie symbol can match only with an identical symbol from $G$. If it is
-a variable $X$, on the first occurrence $X$ is bound to the respective $G$ sub-term
+A non-variable symbol from $G$ must only match with an identical symbol from $C$ and
+these types of unifications are always tried first.
+If the current trie symbol is a variable, for example $X$, on the first occurrence $X$
+is bound to the respective $G$ sub-term
 and match succeeds; on the next occurrences of $X$, the current sub-term from $G$ must
 be identical to the term bound to $X$. Through the backtracking process, bound variables are
-always tried first before unbound variables.
+always tried before unbound variables.
 
 Favoring constant values before variables, results in a mechanism that finds \textit{minimally subsuming calls}.
 Also, if there is some variant call $G''$ in $C$, $G''$ is found before any other subgoal. If no variant 
 or no subsuming call are found, it is possible to save the last trie node where the first backtracking occurred
-to insert a new variant call.
+to insert a new variant call. The new variant path is then used to keep information about the subsumed goal state in
+the leaf call trie node.
