--- a/texto.tex
+++ b/texto.tex
@@ -8,6 +8,7 @@
 \usepackage[boxed,linesnumbered]{algorithm2e}
 \usepackage{fix-cm}
 \usepackage{cite}
+\usepackage{verbatim}
 \usepackage{enumerate}
 
 \usepackage{setspace}
@@ -55,7 +56,6 @@
 \tableofcontents
 \listoffigures
 \listoftables
-\lstlistoflistings
 \listofalgorithms
 \clearpage
 
@@ -64,6 +64,9 @@
 
 \chapter{Logic Programming and Tabling}
 \input{state}
+
+\chapter{Table Space and Subsumption Tabling}
+\input{chapter_3}
 
 \chapter{Subsumption Tabling}
 \chapter{Implementation Details}
