--- a/chapter_3.tex
+++ b/chapter_3.tex
@@ -273,8 +273,8 @@ from $G'$ to the sub-terms of $G$, because only variable substitutions are inser
 The assignments are usually stored under the choice point.
 
 For example, if $G'$ is \texttt{p(X,Y,Z)} and $G$ is \texttt{p(a,a,V)}, the variable assignments
-are $X = a, Y = a, Z = VAR0$. During unification operations, we must unify the first SFA symbol
-to $a$, then to $a$ again, and finally with $VAR0$.
+are \texttt{X = a, Y = a, Z = VAR0}. During unification operations, we must unify the first SFA symbol
+to $a$, then to $a$ again, and finally with \texttt{VAR0}.
 Once a variable is \textit{bound}, subsequent unify operations must unify with the bounded sub-term.
 
 The unification process starts in the root state with an empty \textit{continuation stack}.
@@ -290,7 +290,7 @@ at the root state and is ready to retrieve all answers that unify with $G$.
 The first applicable transition is $s1 \rightarrow s2$ because it unifies with the first symbol: $a$. The transition
 $s1 \rightarrow s5$ can not be pushed into the continuation stack because it does not unify, but $s1 \rightarrow s8$ does.
 In state $s2$ only one transition is available, thus nothing is pushed into the stack.
-Transition $s2 \rightarrow s3$ unifies with symbol $a$ and we move to state $s3$. Here, the variable $VAR0$ (that represents $V$)
+Transition $s2 \rightarrow s3$ unifies with symbol $a$ and we move to state $s3$. Here, the variable \texttt{VAR0} (that represents \texttt{V})
 can unify with $a$, thus we can get to state $s4$, arriving at a leaf state and a new answer, \texttt{V = a}.
 
 Next, the process must use the continuation stack to retrieve more answers. Transition $s1 \rightarrow s8$ is popped from the stack
@@ -428,7 +428,7 @@ the time stamps, search and insertion in TSTs work exactly the same as tries.
 Retrieving all answers that are specific to a subsumed subgoal $G$ from a TST with answers from subgoal $G'$
 works by navigating the TST and unifying the variable values that are assigned from $G'$ to $G$.
 If we wanted to retrieve answers to the subgoal \texttt{p(a,a,X)} from the TST in Figure \ref{fig:tst_2},
-during the subgoal call we determine the assignments relatively to \texttt{path(X,Y,Z)}: $X = a, Y = a, Z = VAR0$,
+during the subgoal call we determine the assignments relatively to \texttt{path(X,Y,Z)}: \texttt{X = a, Y = a, Z = VAR0},
 and store them under the choice point. Then, these values $[a, a, VAR0]$ are then unified
 with the trie symbols, thus finding answers that are specific to $G$.
 
@@ -485,10 +485,10 @@ to match the node symbols with sub-terms or symbols from $G$.
 
 A non-variable symbol from $G$ must only match with an identical symbol from $C$ and
 these types of unifications are always tried first.
-If the current trie symbol is a variable, for example $X$, on the first occurrence $X$
+If the current trie symbol is a variable, for example \texttt{X}, on the first occurrence \texttt{X}
 is bound to the respective $G$ sub-term
-and match succeeds; on the next occurrences of $X$, the current sub-term from $G$ must
-be identical to the term bound to $X$. Through the backtracking process, bound variables are
+and match succeeds; on the next occurrences of \texttt{X}, the current sub-term from $G$ must
+be identical to the term bound to \texttt{X}. Through the backtracking process, bound variables are
 always tried before unbound variables.
 
 Favoring constant values before variables, results in a mechanism that finds \textit{minimally subsuming calls}.
@@ -499,3 +499,39 @@ an already seen $G$ variable that could not be paired to a bound trie variable, 
 must be bound to an unbound trie variable for the process to continue.
 The new variant path is then used to keep information about the subsumed goal state in
 the leaf call trie node.
+
+\begin{figure}[ht]
+  \centering
+    \includegraphics[scale=0.6]{sub_call_search.pdf}
+  \caption{Call trie for predicate \texttt{p/3}.}
+  \label{fig:sub_call_search}
+\end{figure}
+
+For illustration purposes, the Figure \ref{fig:sub_call_search} represents a call trie for the predicate \texttt{p/3}.
+The first subgoal called was \texttt{p(X,2,X)}, followed by \texttt{p(X,f(Y),a(Z))} and finally \texttt{p(X,Y,Z)}.
+
+If the subgoal \texttt{p(X,2,X)} is called once again, the algorithm described above
+should find the variant subgoal represented by the leaf node $n3$. First, we unify the trie variable
+\texttt{VAR0} with \texttt{X} (node $n1$), hence we must also mark the \texttt{X} variable as \textit{seen},
+because if the same variable appears again it must unify with the same trie variable for a variant path
+to exist. Next, \texttt{2} easily unifies with trie node $n2$ and unification proceeds. In trie node $n3$,
+the current call term is \texttt{X} and we also have a variable in the trie node. As \texttt{X} was already seen before,
+it must unify with \textit{VAR0} again, it does and a variant path is found. Please note that if
+the trie symbol at node $n3$ was \texttt{VAR1}, the process could proceed but a variant path would be impossible
+to exist, and a subsuming subgoal would be found, as \texttt{p(VAR0,2,VAR1)} subsumes \texttt{path(VAR0,2,VAR0)}.
+In this case, a variant path could created by resuming the trie insert operation at node $n2$ to insert
+a \texttt{VAR0} node.
+
+For a more complex example, the subgoal \texttt{p(2,f(X),a(2))} is now called for the same call trie. First,
+the algorithm tries to find a trie node with the symbol \texttt{2}, it does not and a variant path
+can not be possibly found in this call trie. Next, the algorithm tries to unify with bound variables, but as the process
+has just started, only unbound variables can be found and \texttt{VAR0} is unified with \texttt{2} (node $n1$).
+The functor term \texttt{f/1} is the next symbol on the subgoal and the first trie node that must be tried is $n4$,
+because it contains a non-variable symbol. The next term is \texttt{X} and it can unify with \texttt{VAR1} (node $n5$).
+Next, the term symbol \texttt{a/1} matches with trie node $n6$ and the process proceeds. Note that if we failed
+at this point, the process would backtrack to node $n2$ and node $n8$ would be tried next, which would
+lead to a more general subgoal. Back to node $n6$, the last term symbol \texttt{2} can match with node $n7$, as it is the only trie
+node available and it is an unbound variable. If the variable was bound, like \texttt{VAR0} for instance,
+the process would check if the current term symbol unifies with the variable binding made before (\texttt{VAR0 = 2}) and
+it would also succeed. As node $n7$ is a leaf node, the process finishes and a subsumptive path is found.
+The following variable bindings were made: \texttt{VAR0 = 2}, \texttt{VAR1 = X}, and \texttt{VAR2 = 2}.
