--- a/texto.tex
+++ b/texto.tex
@@ -40,10 +40,10 @@
   
 \textsc{\large Flávio Manuel Fernandes Cruz}\\[1.5cm]
 
-\textsc{\LARGE TITULO DA TESE}
+\textsc{\LARGE Advanced tabling mechanisms in Prolog}
 \begin{figure}[ht]
   \centering
-  \includegraphics[scale=0.7]{04.png}
+  \includegraphics[scale=1.0]{feup.pdf}
 \end{figure}
 
 
