--- a/state.tex
+++ b/state.tex
@@ -412,7 +412,7 @@ method will be greatly reduced. This new approach will be throughly explored in 
   
   XSB is a research-oriented logic programming system for Unix and Windows based systems. In addition to providing all the functionality
   of the Prolog language, XSB contains several features not usually found in logic programming systems, namely, evaluation according to the
-  Well-Founded Semantics (tabling with negation) \cite{Gelder-91} through the use of a delayed-based tabling engine, the SLG-WAM \cite{Chen-96}.
+  Well-Founded Semantics (tabling with negation) \cite{Gelder-91} through the use of a delaying-based tabling engine, the SLG-WAM \cite{Chen-96}.
   Other features of XSB include: a fully threaded engine, constraint handling for tabled programs on a engine level, a variety of indexing
   techniques, interfaces to other languages, various compiler directives like \texttt{auto\_table}, which does static
   analysis to decide which predicates to table, etc. \cite{system-xsb}.
