Start of the Time Stamped Tries chapter.

--- a/texto.tex
+++ b/texto.tex
@@ -40,7 +40,7 @@
   
 \textsc{\large Flávio Manuel Fernandes Cruz}\\[1.5cm]
 
-\textsc{\LARGE Advanced tabling mechanisms in Prolog}
+\textsc{\LARGE Call Subsumption Mechanisms for Tabled Logic Programs}
 \begin{figure}[ht]
   \centering
   \includegraphics[scale=1.0]{feup.pdf}
@@ -65,10 +65,12 @@
 \chapter{Logic Programming and Tabling}
 \input{state}
 
-\chapter{Table Space and Subsumption Tabling}
+\chapter{Table Space and Subsumptive Tabling}
 \input{chapter_3}
 
-\chapter{Subsumption Tabling}
+\chapter{Time Stamped Tries}
+\input{tst}
+
 \chapter{Implementation Details}
 \chapter{Experimental Results}
 \chapter{Conclusions and further work}
